# harness-ready

./: Cargo.toml
.claude/context/: 2026-07-15-agent-teams-vs-harness-ready-improvement-plan.md  2026-07-15-improvement-plan-prioritized.md
agent-teams-mcp/: Cargo.toml  mcp-config.sample.json
agent-teams-mcp/src/: audit_log.rs  main.rs  memory.rs  phase_b.rs  prompt_all.rs  read_output.rs  task.rs
agent-teams-mcp/src/phase_b/: auth.rs  http.rs  mutations.rs  socket.rs
app/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  vitest.config.js
app/.claude/context/: 2026-07-07-dev-updater-suppression.md
app/src/: bench-core.js  bench-core.test.js  board-core.js  board-core.test.js  bridge-chat-core.js  bridge-chat-core.test.js  bridge-panes.js  bridge-panes.test.js  bridge-settle.js  bridge-settle.test.js  cross-examination.contract.test.js  delegation-log-core.js  delegation-log-core.test.js  diff-view-core.js  diff-view-core.test.js  external-spawn-core.js  external-spawn-core.test.js  flywheel-gate-core.js  flywheel-gate-core.test.js  focus-trap-core.js  force-core.js  force-core.test.js  graph-core.js  graph-core.test.js  index.html  kanban-core.js  kanban-core.test.js  layout-geometry.js  layout-geometry.test.js  layout-tree.js  layout-tree.test.js  lightning-core.js  lightning-core.test.js  main.js  memory-lightning.js  pane-reopen.js  pane-reopen.test.js  poll-core.js  poll-core.test.js  presets.js  (+15 more)
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
app/src-tauri/binaries/: agent-teams-daemon-aarch64-apple-darwin  agent-teams-mcp-aarch64-apple-darwin  whisper-cli-aarch64-apple-darwin
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: codex_trust.rs  daemon_client.rs  daemon_stream.rs  insforge_emit.rs  lib.rs  main.rs
app/src-tauri/tests/: phase05_02_smoke.rs  phase06_01_qe.rs  workspace_isolation.rs
app/src/test-support/: tauri-stub.js  tauri-stub.test.js
app/tests-visual/: skins.spec.js
app/tests-visual/support/: mock-tauri.js
core/agent/: Cargo.toml
core/agent/src/: lib.rs
core/daemon/: Cargo.toml
core/daemon/src/: audit.rs  frames.rs  fsutil.rs  handlers.rs  idle_tick.rs  install.rs  launch.rs  lib.rs  lifecycle.rs  main.rs  reattach.rs  registry_writer.rs  runstate.rs  server.rs  spawn.rs  sups.rs
core/flywheel/: Cargo.toml
core/flywheel/src/: apply.rs  flywheel.rs  gitutil.rs  gitwt.rs  lib.rs  model.rs  orchestrate.rs  runctx.rs  runlog.rs  synthesize.rs  worker.rs
core/harness/: Cargo.toml
core/harness/src/: lib.rs
core/hooks/: SIGNALS.md  claude-hooks.tmpl.json  claude-mcp.tmpl.json  cline-mcp.tmpl.json  codex-notify.sh  cursor-hooks.tmpl.json  cursor-mcp.tmpl.json  cursor-role.tmpl.md  grok-mcp.tmpl.toml  opencode-mcp.tmpl.json  opencode-state-plugin.js  state-writer.sh
core/hooks/spike-evidence/: cursor-hooks.json  cursor.out  state.sh
core/mcp/: Cargo.toml
core/mcp/src/: lib.rs
core/memory/: Cargo.toml
core/memory/src/: lib.rs
core/ringbuf/: Cargo.toml
core/ringbuf/src/: lib.rs
core/roles/: Cargo.toml
core/roles/src/: lib.rs
core/state-adapter/: Cargo.toml
core/state-adapter/src/: inject.rs  lib.rs  watch.rs
core/state-adapter/tests/: inject.rs  normalize.rs
core/supervisor/: Cargo.toml
core/supervisor/examples/: probe_claude.rs
core/supervisor/src/: lib.rs  subscribers.rs
core/supervisor/tests/: live_tui.rs  mcp_e2e.rs  pty.rs
core/task/: Cargo.toml
core/task/src/: lib.rs
docs/: REQUIRES-HUMAN-DESIGN-branch-wire-through.md  REQUIRES-HUMAN-DESIGN-liveness-blindness.md
scripts/: AUTO-SHIP-RUNBOOK.md  auto-ship.sh  build-daemon-sidecar.sh  build-mcp-sidecar.sh  build-whisper-cli.sh  check-settings-skin.sh  dev-isolated.sh  dev.sh  ensure-dev-cert.sh  fetch-whisper-model.sh  gen-signing-cert.sh  guard-gated-files.sh  install-app.sh  layout-audit.mjs  probe-enablement.py  rebuild-phaseb.sh  sync-worktree-trust.sh  test-all.sh  test-app-crate.sh  trigger-delegate.py  verify-worker-capability.sh
scripts/preflight/repomap/: README.md  repomap.py
scripts/preflight/repomap/queries/: javascript-tags.scm  rust-tags.scm
scripts/preflight/serena/: README.md  serena-worktree.sh
scripts/preflight/skills/: README.md  link-skills.sh
scripts/quality/calibration/: calibrate.py  review_prompt.md  selftest.sh
scripts/quality/crap/: .gitignore  README.md  assertion_density.py  crap_delta.py  run-crap-delta.sh  selftest.sh
scripts/quality/crap/sample/diffs/: clean.diff  gamed.diff
scripts/quality/crap/sample/js-sample/: index.js  package.json  test.js  test_base.js
scripts/quality/crap/sample/rust-sample/: Cargo.toml
ui/: HANDOFF.md  package-lock.json  package.json  vite.config.js  vitest.config.js
ui/.claude/context/: 2026-07-13-base44-tauri-embed.md  2026-07-13-feature-parity-plan.md  2026-07-14-harness-ready-standalone.md  2026-07-14-tiling-toolbar-integration.md
ui/base44/entities/: AgentTemplate.jsonc
ui/src/: App.jsx  index.css
ui/src/api/: base44Client.js  localAgentTemplateStore.js
ui/src/components/command/: AgentDirectory.jsx  AgentPane.jsx  AttentionPrompt.jsx  BulkActionBar.jsx  CommandOverlay.jsx  ConfirmOverlay.jsx  EmptyState.jsx  LayoutToolbar.jsx  NewAgentOverlay.jsx  PaneMenu.jsx  PerformanceWidget.jsx  SessionInfo.jsx  TitleBar.jsx  TopBar.jsx  WorkspaceTile.jsx  WorkspacesPanel.jsx
ui/src/components/command/templates/: TemplateBuilder.jsx  TemplateList.jsx  TemplatesOverlay.jsx  templateAgents.js
ui/src/components/monitor/: ResourceChart.jsx  StatCard.jsx  SuccessRateChart.jsx
ui/src/lib/: agentBridge.js  agentBridge.spawn.test.js  agentData.js  agentNames.js  agentTypes.js  isReplyTraffic.test.js  monitorData.js  paneLabels.js  tauriAgentBridge.js  tauriAgentBridge.spawn.test.js  useKeyboardShortcuts.js  workspaceAssign.js  workspaceAssign.test.js  workspaceStore.js  workspaceStore.test.js
ui/src/lib/layout/: geometry.js  tree.js  useTiling.js
ui/src/lib/layout/__tests__/: geometry.test.js  tree.test.js  (+1 more)
ui/src/pages/: Home.jsx  Monitoring.jsx
(+1 files in other folders)
